tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm14_10.snap
---
source: tket2-hseries/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@res_test_arr_i.DFD30452.0 = private constant [25 x i8] c"\18USER:INTARR:test_arr_int"

define [10 x i64] @_hl.main.1([10 x i64] %0) {
alloca_block:
  %"0" = alloca [10 x i64], align 8
  %"2_0" = alloca [10 x i64], align 8
  %"4_0" = alloca [10 x i64], align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store [10 x i64] %0, [10 x i64]* %"2_0", align 4
  %"2_01" = load [10 x i64], [10 x i64]* %"2_0", align 4
  %tag_len = load i8, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @res_test_arr_i.DFD30452.0, i32 0, i32 0), align 1
  %tag_len2 = zext i8 %tag_len to i64
  %1 = alloca i64, i32 10, align 8
  %2 = bitcast i64* %1 to [10 x i64]*
  store [10 x i64] %"2_01", [10 x i64]* %2, align 4
  %out_arr_alloca = alloca <{ i32, i32, i64*, i1* }>, align 8
  %x_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 0
  %y_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 1
  %arr_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 2
  %mask_ptr = getelementptr inbounds <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, i32 0, i32 3
  %3 = alloca i1, i32 10, align 1
  %4 = bitcast i1* %3 to [10 x i1]*
  store [10 x i1] zeroinitializer, [10 x i1]* %4, align 1
  store i32 10, i32* %x_ptr, align 4
  store i32 1, i32* %y_ptr, align 4
  store i64* %1, i64** %arr_ptr, align 8
  store i1* %3, i1** %mask_ptr, align 8
  %5 = load <{ i32, i32, i64*, i1* }>, <{ i32, i32, i64*, i1* }>* %out_arr_alloca, align 1
  call void @print_int_arr(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @res_test_arr_i.DFD30452.0, i32 0, i32 0), i64 %tag_len2, <{ i32, i32, i64*, i1* }>* %out_arr_alloca)
  store [10 x i64] %"2_01", [10 x i64]* %"4_0", align 4
  %"4_03" = load [10 x i64], [10 x i64]* %"4_0", align 4
  store [10 x i64] %"4_03", [10 x i64]* %"0", align 4
  %"04" = load [10 x i64], [10 x i64]* %"0", align 4
  ret [10 x i64] %"04"
}

declare void @print_int_arr(i8*, i64, <{ i32, i32, i64*, i1* }>*)
