tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm14_12.snap
---
source: tket2-hseries/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@"res_\E6\B5\8B\E8\AF\95\E5\AD\97\E7\AC\A6\E4\B8\B2.935D2D1A.0" = private constant [25 x i8] c"\18USER:INT:\E6\B5\8B\E8\AF\95\E5\AD\97\E7\AC\A6\E4\B8\B2"

define void @_hl.main.1(i64 %0) {
alloca_block:
  %"2_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, i64* %"2_0", align 4
  %"2_01" = load i64, i64* %"2_0", align 4
  %tag_len = load i8, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @"res_\E6\B5\8B\E8\AF\95\E5\AD\97\E7\AC\A6\E4\B8\B2.935D2D1A.0", i32 0, i32 0), align 1
  %tag_len2 = zext i8 %tag_len to i64
  call void @print_int(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @"res_\E6\B5\8B\E8\AF\95\E5\AD\97\E7\AC\A6\E4\B8\B2.935D2D1A.0", i32 0, i32 0), i64 %tag_len2, i64 %"2_01")
  ret void
}

declare void @print_int(i8*, i64, i64)
